Added interfaces to Request body
