# controllers/userController/loginUser.ts
@@ -1,3 +1,10 @@
+/**
+ * @author Joseph Adogeri
+ * @version 1.0
+ * @since 18-JAN-2025
+ *
+ */
+
 const asyncHandler = require("express-async-handler");
 import * as bcrypt from "bcrypt";
 import { Response, Request } from 'express';
@@ -6,7 +13,7 @@ import * as  jwt from "jsonwebtoken";
 import { IAuth } from "../../interfaces/IAuth";
 import * as userService from"../../services/userService"
 import * as authService from"../../services/authService"
-import { APIManager } from "../../entities/APIManager";
+import { APIManager } from "../../api/APIManager";
 
 
 /**
@@ -15,67 +22,48 @@ import { APIManager } from "../../entities/APIManager";
 *@access public
 */
 
+
 export const loginUser = asyncHandler(async (req : Request<{},{},IUser>, res: Response)  => {
+ // #swagger.tags = ['User'] // Tag this route with 'Users'
+    // #swagger.summary = 'Get all users'
+  const { email, password } = req.body;
+  console.log(email,password)
+  if (!email || !password) {
+    res.status(400);
+    throw new Error("All fields are mandatory!");
 
-   console.log('token finally made it data from token === ')
-
-    const { email, password } = req.body;
-    console.log(email,password)
-    if (!email || !password) {
-      res.status(400);
-      throw new Error("All fields are mandatory!");
-
-    }
-    const user  = await userService.get(email as string);
+  }
+  const user  = await userService.getByEmail(email as string);
     
     //compare password with hashedpassword 
-    if (user &&  await bcrypt.compare(password,user.password as string)) {
-      console.log("checking using password bcrypt if")
+  if (user &&  await bcrypt.compare(password,user.password as string)) {
 
-      let payload = {
-        user: {
-          username: user.username as string , email: user.email as string , id: user._id ,
-        },
-      }
-      console.log("outside if")
-      
-//post fix operator   knowing value cant be undefined
-      let secretKey  = process.env.ACCESS_TOKEN_SECRET! ;
-      const accessToken  =  jwt.sign( payload,secretKey as jwt.Secret,  { expiresIn: "15m" } );
-      //add token and id to auth 
-      console.log("auth token =======",accessToken)
-      const authData : IAuth = {
-        id : user._id,
-        token : accessToken
-      }
-
-      console.log("authdata ==== ", authData)
-
-      console.log("id====",user._id)
-      const authenticatedUser = await authService.getById(user._id);
-      console.log("authenticated user =======",authenticatedUser)
-
-      try{
-      if(!authenticatedUser){
-        const response = await APIManager.addAuth(authData, accessToken);
-        console.log("not auth user",response.data)
-      }
-      else{
-        const response = await APIManager.updateAuth(authData,accessToken);     
-        console.log("great atuth auth user",response.data)
-      }
-
-       res.status(200).json({ accessToken });
-    }catch(e){
-      console.log(e)
+    let payload = {
+      user: {
+        username: user.username as string , email: user.email as string , id: user._id ,
+      },
     }
- 
+    //post fix operator   knowing value cant be undefined
+    let secretKey  = process.env.ACCESS_TOKEN_SECRET! ;
+    const accessToken  =  jwt.sign( payload,secretKey as jwt.Secret,  { expiresIn: "30m" } );
+    //add token and id to auth 
+    const authData : IAuth = {
+      id : user._id,
+      token : accessToken
+    }
+
+    const authenticatedUser = await authService.getById(user._id);
+    if(!authenticatedUser){
+      await APIManager.addAuth(authData, accessToken);
     }else{
- 
-  res.status(400).json({ message: "email or password is not valid" });
+      await APIManager.updateAuth(authData,accessToken);     
     }
+      res.status(200).json({ accessToken }); 
+  }else{ 
+    res.status(400).json({ message: "email or password is not valid" });
+  }
 
-  });
+});
   
 
 
